// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbsItem 'current' item renders correctly 1`] = `
<nav
  aria-label="Breadcrumb"
  className="breadcrumbs-bar--wrapper"
>
  <ol>
    <li
      className="breadcrumbItem--wrapper current"
    >
      <span
        aria-current="page"
        aria-disabled="true"
        className="breadcrumb-content current"
        tabIndex="0"
      >
        <span
          className="breadcrumb-text"
        >
          
        </span>
      </span>
    </li>
  </ol>
</nav>
`;

exports[`BreadcrumbsItem 'disabled' item renders correctly 1`] = `
<nav
  aria-label="Breadcrumb"
  className="breadcrumbs-bar--wrapper"
>
  <ol>
    <li
      className="breadcrumbItem--wrapper disabled"
    >
      <span
        aria-disabled="true"
        className="breadcrumb-content disabled"
        tabIndex="0"
      >
        <span
          className="breadcrumb-text"
        >
          
        </span>
      </span>
    </li>
  </ol>
</nav>
`;

exports[`BreadcrumbsItem renders correctly with empty props 1`] = `
<nav
  aria-label="Breadcrumb"
  className="breadcrumbs-bar--wrapper"
>
  <ol>
    <li
      className="breadcrumbItem--wrapper"
    >
      <span
        aria-disabled="true"
        className="breadcrumb-content"
        tabIndex="0"
      >
        <span
          className="breadcrumb-text"
        >
          
        </span>
      </span>
    </li>
  </ol>
</nav>
`;

exports[`BreadcrumbsItem renders correctly with icon 1`] = `
<nav
  aria-label="Breadcrumb"
  className="breadcrumbs-bar--wrapper"
>
  <ol>
    <li
      className="breadcrumbItem--wrapper"
    >
      <span
        aria-disabled="true"
        className="breadcrumb-content"
        tabIndex="0"
      >
        <svg
          className="breadcrumb-icon"
          clickable={false}
          fill="currentColor"
          height="14"
          viewBox="0 0 20 20"
          width="14"
        >
          <path
            clipRule="evenodd"
            d="M3 2.25C2.58579 2.25 2.25 2.58579 2.25 3V8.38462C2.25 8.79883 2.58579 9.13462 3 9.13462H8.38462C8.79883 9.13462 9.13462 8.79883 9.13462 8.38462V3C9.13462 2.58579 8.79883 2.25 8.38462 2.25H3ZM3.75 7.63462V3.75H7.63462V7.63462H3.75ZM11.6154 2.25C11.2012 2.25 10.8654 2.58579 10.8654 3V8.38462C10.8654 8.79883 11.2012 9.13462 11.6154 9.13462H17C17.4142 9.13462 17.75 8.79883 17.75 8.38462V3C17.75 2.58579 17.4142 2.25 17 2.25H11.6154ZM12.3654 7.63462V3.75H16.25V7.63462H12.3654ZM2.25 11.6154C2.25 11.2012 2.58579 10.8654 3 10.8654H8.38462C8.79883 10.8654 9.13462 11.2012 9.13462 11.6154V17C9.13462 17.4142 8.79883 17.75 8.38462 17.75H3C2.58579 17.75 2.25 17.4142 2.25 17V11.6154ZM3.75 12.3654V16.25H7.63462V12.3654H3.75ZM11.6154 10.8654C11.2012 10.8654 10.8654 11.2012 10.8654 11.6154V17C10.8654 17.4142 11.2012 17.75 11.6154 17.75H17C17.4142 17.75 17.75 17.4142 17.75 17V11.6154C17.75 11.2012 17.4142 10.8654 17 10.8654H11.6154ZM12.3654 16.25V12.3654H16.25V16.25H12.3654Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <span
          className="breadcrumb-text"
        >
          Workspace
        </span>
      </span>
    </li>
    <svg
      aria-hidden="true"
      className="sparatorIcon"
      fill="currentColor"
      height="14"
      viewBox="0 0 20 20"
      width="14"
    >
      <path
        clipRule="evenodd"
        d="M13.5303 9.46967L13 10L13.5303 10.5303C13.8232 10.2374 13.8232 9.76256 13.5303 9.46967ZM11.9393 10L5.46967 16.4697C5.17678 16.7626 5.17678 17.2374 5.46967 17.5303C5.76256 17.8232 6.23744 17.8232 6.53033 17.5303L13.5303 10.5303L13 10L13.5303 9.46967L6.53033 2.46967C6.23744 2.17678 5.76256 2.17678 5.46967 2.46967C5.17678 2.76256 5.17678 3.23744 5.46967 3.53033L11.9393 10Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    <li
      className="breadcrumbItem--wrapper"
    >
      <span
        aria-disabled="true"
        className="breadcrumb-content"
        tabIndex="0"
      >
        <svg
          className="breadcrumb-icon"
          clickable={false}
          fill="currentColor"
          height="14"
          viewBox="0 0 20 20"
          width="14"
        >
          <path
            clipRule="evenodd"
            d="M7.5 4.5H16C16.2761 4.5 16.5 4.72386 16.5 5V15C16.5 15.2761 16.2761 15.5 16 15.5H7.5L7.5 4.5ZM6 4.5H4C3.72386 4.5 3.5 4.72386 3.5 5V15C3.5 15.2761 3.72386 15.5 4 15.5H6L6 4.5ZM2 5C2 3.89543 2.89543 3 4 3H16C17.1046 3 18 3.89543 18 5V15C18 16.1046 17.1046 17 16 17H4C2.89543 17 2 16.1046 2 15V5Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <span
          className="breadcrumb-text"
        >
          Board
        </span>
      </span>
    </li>
  </ol>
</nav>
`;
